--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "electron": "^29.0.1",
     "electron-store": "^8.1.0",
+    "file-icon-extractor": "^1.0.4",
     "get-app-icon": "^1.0.1",
     "get-windows": "^9.2.0",
     "icon-extractor": "^1.0.3",
