--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-  "timelineIncrements": 15,
+  "timelineIncrements": 30,
   "darkMode": false,
   "useEmojis": true,
-  "colorCodedEvents": false,
+  "colorCodedEvents": true,
   "defaultView": "day"
 }
