--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "timelineIncrements": 30,
   "darkMode": true,
-  "themeMode": "system",
+  "themeMode": "light",
   "useEmojis": true,
   "colorCodedEvents": true,
   "defaultView": "day",
