--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "timelineIncrements": 10,
   "darkMode": true,
-  "themeMode": "dark",
+  "themeMode": "light",
   "useEmojis": false,
   "colorCodedEvents": true,
   "defaultView": "day",
