Implement manual entry feature with modal for adding activities, update index.html and renderer.js for new UI elements, and adjust settings to default view as month.

--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
   "themeMode": "light",
   "useEmojis": true,
   "colorCodedEvents": true,
-  "defaultView": "week",
+  "defaultView": "month",
   "categories": [
     "EEEEEEEA"
   ],
