Enhance calendar view with new styles for day, week, and month headers in index.html, update button group for view selection, and improve renderer.js to handle view state and date navigation. Adjust settings.json to change theme mode to system and clear categories.

--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,13 @@
 {
   "timelineIncrements": 5,
   "darkMode": true,
-  "themeMode": "light",
+  "themeMode": "system",
   "useEmojis": true,
   "colorCodedEvents": true,
   "defaultView": "month",
-  "categories": [
-    "EEEEEEEA"
-  ],
+  "categories": [],
   "appClassifications": {
-    "Visual Studio Code": "Work",
-    "Electron": "Productivity",
-    "Search": "Work",
-    "Zen Browser": "Entertainment",
-    "YouTube": "Entertainment",
-    "Discord": "Social"
+    "sda": "EEEEEEEA"
   },
   "idleThreshold": 5,
   "pomodoroSettings": {
