Enhance UI by adding new settings for activity grouping and icon display in index.html and settings.json. Update renderer.js to support grouping functionality and adjust app icon visibility based on user preferences.

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,8 @@
   "useEmojis": true,
   "colorCodedEvents": true,
   "defaultView": "month",
+  "enableGrouping": true,
+  "groupingThreshold": 5,
   "categories": [],
   "appClassifications": {
     "sda": "EEEEEEEA"
