Update UI styles in index.html for entry elements, including improved padding, font size, and background color. Add a sticky button for tracking at the bottom of the view. Modify settings.json to change default view to day and enable icon display.

--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,13 @@
 {
   "timelineIncrements": 5,
   "darkMode": true,
-  "themeMode": "system",
+  "themeMode": "light",
   "useEmojis": true,
   "colorCodedEvents": true,
-  "defaultView": "month",
+  "defaultView": "day",
   "enableGrouping": true,
   "groupingThreshold": 5,
+  "showIcons": true,
   "categories": [],
   "appClassifications": {
     "sda": "EEEEEEEA"
