Update icon styles in index.html and renderer.js, replacing Font Awesome icons with Flaticon icons for a more cohesive design. Adjust color variables in index.html for improved contrast and readability. Modify settings.json to change timeline increments from 5 to 30 for better user experience.

--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,13 @@
 {
-  "timelineIncrements": 5,
+  "timelineIncrements": 30,
   "darkMode": true,
-  "themeMode": "light",
+  "themeMode": "system",
   "useEmojis": true,
   "colorCodedEvents": true,
   "defaultView": "day",
   "enableGrouping": true,
   "groupingThreshold": 5,
+  "prioritizeWindowId": true,
   "showIcons": true,
   "categories": [],
   "appClassifications": {
