--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "get-app-icon": "^1.0.1",
     "get-windows": "^9.2.0",
     "icon-extractor": "^1.0.3",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "firebase": "^10.7.1"
   }
 }
