Add subscription management section in index.html, integrate payment scripts, and enhance API for Stripe checkout session and webhook handling. Update package.json and package-lock.json with new dependencies for improved payment processing and subscription verification.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Track active windows and save to JSON",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "server": "node server.js",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "build": "electron-builder"
   },
   "dependencies": {
     "electron": "^29.0.1",
@@ -17,6 +20,14 @@
     "jquery": "^3.7.1",
     "firebase": "^10.7.1",
     "stripe": "^18.3.0",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "micro": "^10.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "electron-builder": "^24.9.1"
   }
 }
