--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "build": "electron-builder"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "electron": "^29.0.1",
     "electron-store": "^8.1.0",
+    "express": "^4.21.2",
     "file-icon": "^5.1.1",
     "file-icon-extractor": "^1.0.4",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^13.4.0",
     "get-app-icon": "^1.0.1",
     "get-windows": "^9.2.0",
     "icon-extractor": "^1.0.3",
     "jquery": "^3.7.1",
-    "firebase": "^10.7.1",
-    "stripe": "^18.3.0",
-    "firebase-admin": "^13.4.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "micro": "^10.0.1"
+    "micro": "^10.0.1",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
