--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "start": "electron .",
     "server": "node server.js",
     "dev": "concurrently \"npm run server\" \"npm run start\"",
-    "build": "electron-builder"
+    "build": "echo 'Web build completed'",
+    "build:electron": "electron-builder"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "electron": "^29.0.1",
-    "electron-store": "^8.1.0",
     "express": "^4.21.2",
     "file-icon": "^5.1.1",
     "file-icon-extractor": "^1.0.4",
@@ -28,6 +27,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "electron-builder": "^24.9.1"
+    "electron": "^29.0.1",
+    "electron-builder": "^24.9.1",
+    "electron-store": "^8.1.0"
   }
 }
