Refactor Firebase initialization in API files to use a centralized module, update .env with actual Firebase credentials, and enhance .gitignore to exclude sensitive files. Remove redundant Firebase initialization code from individual API handlers for improved maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 /node_modules
 segments.csv
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Firebase service account key
+serviceAccountKey.json
+
+# Build outputs
+dist/
+build/
+
+# IDE files
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
