Update .gitignore to exclude Firebase service account JSON file, enhance package.json scripts for better development workflow, and add new API endpoints for Firebase testing and simple testing in server.js. Improve Firebase initialization error handling in firebase-admin.js and ensure Firebase status checks in manual-update.js, stripe-webhook.js, and verify-subscription.js for robust error management.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Track active windows and save to JSON",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
     "server": "node server.js",
-    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "electron": "electron .",
+    "start": "concurrently \"npm:server\" \"npm:electron\"",
     "build": "echo 'Web build completed'",
     "build:electron": "electron-builder"
   },
