Update theme mode in settings.json from light to dark for improved user experience.

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "timelineIncrements": 30,
   "darkMode": true,
-  "themeMode": "light",
+  "themeMode": "dark",
   "useEmojis": true,
   "colorCodedEvents": true,
   "defaultView": "day",
