--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Thumbs.db
 timetracker-7da41-firebase-adminsdk-fbsvc-85d68ea226.json
 .env
 .vercel
+timetracker-7da41-firebase-adminsdk-fbsvc-0c0a50a92c.json
