Update segments.csv with new entries and modify settings.json to switch theme mode to light. Adjust firebase-admin.js to change service account key path and update error messages for clarity regarding configuration. This enhances the initialization process and improves user guidance.

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "timelineIncrements": 30,
   "darkMode": true,
-  "themeMode": "dark",
+  "themeMode": "light",
   "useEmojis": true,
   "colorCodedEvents": true,
   "defaultView": "day",
